--- a/src/client/index.html
+++ b/src/client/index.html
@@ -39,9 +39,10 @@
         margin: 0;
         padding: 0;
         overflow: hidden;
-        font-family: "lores-12", sans-serif;
+        font-family: "Pixelify Sans", sans-serif;
         font-weight: 400;
         font-style: normal;
+        line-height: normal;
       }
       
       #root {
